# htwg-practical-nlp

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: assignment-submission.md  presentation-topic.md
.github/workflows/: black.yml  ruff.yml
about/course_profile/: index.html
about/prerequisites/: index.html
assignments/: index.html
course_profile/: index.html
docs/: assignments.md  course_profile.md  exam.md  faq.md  getting_started.md  index.md  presentations.md
docs/about/: course.md  course_profile.md  instructor.md  organizational.md  prerequisites.md  profile.md  syllabus.md
docs/lectures/: attention_models.md  feature_extraction.md  further_reading.md  introduction.md  language_models.md  logistic_regression.md  minimum_edit_distance.md  naive_bayes.md  nlp_intro.md  nlp_pipeline.md  preface.md  preprocessing.md  recurrent_neural_networks.md  sequence_models.md  vector_space_models.md  word_embeddings.md
docs/presentations/: OS_LLMs_Robert.md  presentations.md  template.md
exam/: index.html
faq/: index.html
getting_started/: index.html
includes/: abbreviations.md
lectures/attention_models/: index.html
lectures/feature_extraction/: index.html
lectures/further_reading/: index.html
lectures/introduction/: index.html
lectures/language_models/: index.html
notebooks/: data_acquisition.ipynb  logistic_regression.ipynb  minimum_edit_distance.ipynb  naive_bayes.ipynb  preprocessing.ipynb  vector_space_models.ipynb
presentations/: index.html
search/: search_index.json
src/htwgnlp/: __init__.py  (+6 more)
tests/: __init__.py
(+67 files in other folders)
