[project]
name = "htwg-practical-nlp"
version = "0.1.0"
description = "A practical course on natural language processing @ HTWG Konstanz."
readme = "README.md"
authors = [{ name = "Pascal Keilbach", email = "pascal.keilbach@htwg-konstanz.de" }]
dependencies = [
    "jupyterlab~=4.3.4",
    "matplotlib~=3.9.2",
    "mkdocs-material~=9.5.39",
    "nltk~=3.9.1",
    "pandas~=2.2.3",
    "pytest~=8.3.3",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pre-commit~=3.8.0",
    "black[jupyter]~=24.10.0",
    "mypy~=1.11.2",
    "ruff~=0.7.0",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
